# papercast

./: README.md  main.py  pyproject.toml
backend/: .env.org  .gitignore  .mcp.json  .mcp.json.org  Makefile  pyproject.toml
backend/.claude/: settings.local.json
backend/scripts/: run.py
backend/src/papercast/: config.py  dependencies.py  main.py
backend/src/papercast/entities/: __init__.py  arxiv_paper.py
backend/src/papercast/infrastructure/: gcs.py
backend/src/papercast/internal/: worker.py
backend/src/papercast/repositories/: __init__.py  arxiv_paper_repository.py
backend/src/papercast/services/: arxiv_paper_service.py  audio_service.py  daily_paper_service.py  db.py  file_service.py  markdown_parser.py  pdf_file_service.py  podcast_service.py  scraping_service.py  text_to_speach_service.py
backend/src/papercast/services/prompts/: evaluate_script.txt  is_relevant_paper.txt  summarize_sections.txt  write_script.txt
backend/supabase/migrations/: 20250920141055_create_arxiv_paper.sql  20251016114341_add_arxiv_paper_to_script.sql  20251020131239_add_arxiv_paper_to_target_date_and_status.sql
backend/tests/: conftest.py
backend/tests/internal/: test_worker.py
backend/tests/repositories/: test_arxiv_paper_repository.py
backend/tests/services/: test_arxiv_paper_service.py  test_markdown_parser.py  test_podcast_service.py  test_scraping_service.py  test_text_to_speech_service.py
