[project]
name = "papercast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fastapi[standard]>=0.116.1",
    "google-cloud-storage>=3.3.0",
    "google-genai>=1.32.0",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.10",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.6",
    "pydub>=0.25.1",
    "pymupdf>=1.26.4",
    "pymupdf4llm>=0.0.27",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "supabase>=2.18.1",
]

[tool.uv]
package = true
dev-dependencies = [
    "click>=8.2.1",
    "ipython>=9.4.0",
    "langsmith>=0.4.20",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]

[tool.uv.sources]
papercast = { workspace = true }

[tool.ruff]
lint.select = [
    "C9",
    "E",
    "F",
    "W",
    "I",
]
include = ["*.py"]
line-length = 120

[tool.ruff.format]
quote-style = "double"
